@@ -1,5 +1,9 @@
 2018-05-18  Tom Tromey  <tom@tromey.com>
 
+	* dwarf2read.c (dwarf2_read_debug_names): Use std::unique_ptr.
+
+2018-05-18  Tom Tromey  <tom@tromey.com>
+
 	* dwarf2read.c (dwarf2_per_objfile): Update.
 	(struct mapped_index): Add initializers.
 	(dwarf2_read_index): Use new.
